--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -185,11 +185,11 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Tomorrow Night)
-#colors:
+colors:
   # Default colors
-  #primary:
-  #  background: '#1d1f21'
-  #  foreground: '#c5c8c6'
+  primary:
+    background: '#271713'
+    foreground: '#b2b2b2'
 
     # Bright and dim foreground colors
     #
@@ -197,8 +197,8 @@ font:
     # present. If the bright foreground color is not set, or
     # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
     # color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
+    dim_foreground: '#ffffff'
+    bright_foreground: '#656565'
 
   # Cursor colors
   #
@@ -281,40 +281,40 @@ font:
   #  background: CellForeground
 
   # Normal colors
-  #normal:
-  #  black:   '#1d1f21'
-  #  red:     '#cc6666'
-  #  green:   '#b5bd68'
-  #  yellow:  '#f0c674'
-  #  blue:    '#81a2be'
-  #  magenta: '#b294bb'
-  #  cyan:    '#8abeb7'
-  #  white:   '#c5c8c6'
+  normal:
+    black:   '#000000'
+    red:     '#d23838'
+    green:   '#68ad59'
+    yellow:  '#b29710'
+    blue:    '#1890e8'
+    magenta: '#b22d93'
+    cyan:    '#45b9ac'
+    white:   '#b2b2b2'
 
   # Bright colors
-  #bright:
-  #  black:   '#666666'
-  #  red:     '#d54e53'
-  #  green:   '#b9ca4a'
-  #  yellow:  '#e7c547'
-  #  blue:    '#7aa6da'
-  #  magenta: '#c397d8'
-  #  cyan:    '#70c0b1'
-  #  white:   '#eaeaea'
+  bright:
+    black:   '#686868'
+    red:     '#ff5454'
+    green:   '#54ff54'
+    yellow:  '#ffff54'
+    blue:    '#00d2ff'
+    magenta: '#cf66ae'
+    cyan:    '#8ffff4'
+    white:   '#ffffff'
 
   # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
+  dim:
+    black:   '#181818'
+    red:     '#650000'
+    green:   '#82af60'
+    yellow:  '#d25710'
+    blue:    '#000065'
+    magenta: '#650065'
+    cyan:    '#006565'
+    white:   '#656565'
 
   # Indexed Colors
   #
@@ -439,9 +439,9 @@ cursor:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
 #shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+  program: /bin/bash
+  args:
+    - --login
 
 # Startup directory
 #
