--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,23 +1,25 @@
 shadow = false
 
-blur-background = false;
-blur-background-frame = false;
-
-blur-method = "dual_kawase"
-blur-strength = 4;
-blur-kern = "3x3box"
-blur-background-fixed = true;
+blur: {
+     method = "gaussian";
+     size = 10;
+     deviation = 7.0;
+     kernel = "3x3box"
+     strength = 10;
+}
 
 opacity-rule = [
-	     "90:class_g = 'Alacritty'",
-	     "90:class_g = 'Emacs'",
+	     "93:class_g = 'Emacs'",
+	     "93:class_g = 'jetbrains-idea-ce'"
 ];
 
 corner-radius = 8;
 
 rounded-corners-exclude = [
   "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
+  "class_g = 'Dunst'",
+  "class_g = 'slop'"
 ];
 
 vsync = true;
