--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,17 +1,26 @@
-shadow = false
+shadow = false;
 
 blur: {
-     method = "gaussian";
-     size = 10;
-     deviation = 7.0;
-     kernel = "3x3box"
-     strength = 10;
+     method = "dual_kawase";
+     size = 30;
+     deviation = 20.0;
+     #kernel = "3x3box"
+     strength = 7;
 }
 
-opacity-rule = [
-	     "93:class_g = 'Emacs'",
-	     "93:class_g = 'jetbrains-idea-ce'"
+blur-background-exclude = [
+    "class_g = 'Xfce4-screenshooter'"
 ];
+
+opacity-rule = [
+	     #"100:class_g = 'Emacs'",
+	     "93:class_g = 'jetbrains-idea-ce'",
+         "100:class_g = 'Rofi'"
+];
+
+#inactive-opacity = 0.8;
+active-opacity = 1;
+inactive-blur-strength = 1;
 
 corner-radius = 8;
 
@@ -19,7 +28,8 @@ rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "class_g = 'Dunst'",
-  "class_g = 'slop'"
+  "class_g = 'slop'",
+  "class_g = 'rofi'"
 ];
 
 vsync = true;
