Update Rofi and qtile bar config Add transparency for rofi and colors for bar widgets (fancy!)

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,3 @@
-shadow = false;
 
 blur: {
      method = "dual_kawase";
@@ -30,6 +29,11 @@ rounded-corners-exclude = [
   "class_g = 'Dunst'",
   "class_g = 'slop'",
   "class_g = 'rofi'"
+];
+
+shadow = true;
+shadow-exclude = [
+  "(!class_g = 'Rofi')"
 ];
 
 vsync = true;
