--- a/iosevka-custom/private-build-plans.toml
+++ b/iosevka-custom/private-build-plans.toml
@@ -15,17 +15,17 @@ export-glyph-names = false
     j = "serifed"
     v = "straight-serifless"
     x = "straight-serifless"
-    y = "straight-turn"
+    y = "straight-serifless"
     z = "straight-serifless"
     lower-delta = "rounded"
     lower-lambda = "straight-turn"
-    lower-mu = "tailed"
+    lower-mu = "tailed-serifless"
     lower-xi = "rounded"
     cyrl-capital-zhe = "symmetric-connected"
     cyrl-zhe = "symmetric-connected"
     cyrl-capital-ka = "curly-serifless"
     cyrl-ka = "curly-serifless"
-    zero = "slashed-split-oval"
+    zero = "oval-slashed-split"
     five = "oblique-upper-left-bar"
     seven = "straight-serifless"
     punctuation-dot = "round"
@@ -37,7 +37,6 @@ export-glyph-names = false
     dollar = "through"
     bar = "natural-slope"
     partial-derivative = "straight-bar"
-    micro-sign = "tailed"
     lig-ltgteq = "slanted"
     lig-equal-chain = "without-notch"
     lig-hyphen-chain = "without-notch"
