Sync config with raclette

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,8 +1,7 @@
-shadow = false;
 
 blur: {
      method = "dual_kawase";
-     size = 30;
+     size = 20;
      deviation = 20.0;
      #kernel = "3x3box"
      strength = 7;
@@ -30,6 +29,11 @@ rounded-corners-exclude = [
   "class_g = 'Dunst'",
   "class_g = 'slop'",
   "class_g = 'rofi'"
+];
+
+shadow = true;
+shadow-exclude = [
+  "(!class_g = 'Rofi')"
 ];
 
 vsync = true;
