Small tweaks an QoL changes - Add alias for 'tree' to add colors by default - Change transparency and rounded corners for dunst popups - Change rofi window size - Add qtile hook to place some windows on specific groups automatically - Add shadow to rofi window (through picom)

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -33,7 +33,7 @@ rounded-corners-exclude = [
 
 shadow = true;
 shadow-exclude = [
-  "(!class_g = 'Rofi')"
+  "(!class_g = 'Rofi' && !class_g = 'Dunst')"
 ];
 
 vsync = true;
