--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,6 +32,9 @@ rounded-corners-exclude = [
 ];
 
 shadow = true;
+shadow-red =   0.05;
+shadow-green = 0.05;
+shadow-blue =  0.05;
 shadow-exclude = [
   "(!class_g = 'Rofi')"
 ];
