Add icons to Rofi, change qtile bar font to Inter

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -13,7 +13,7 @@ blur-background-exclude = [
 
 opacity-rule = [
 	     #"100:class_g = 'Emacs'",
-	     "93:class_g = 'jetbrains-idea-ce'",
+	     #"93:class_g = 'jetbrains-idea-ce'",
          "100:class_g = 'Rofi'"
 ];
 
