Fix alacritty config, change emacs theme fonts, add eglot keybindings
Fix invalid shell arguments (alacritty)
Change default font to Iosevka (emacs)
Add keybindings to rename and format code with eglot (emacs)
Small color and style tweaks for code (emacs)
Remove IDEA IntelliJ transparency (picom)

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,9 @@
 [bell]
 animation = "EaseOutExpo"
-args = ["--login"]
+
+[shell]
 program = "/bin/bash"
+args = ["-l"]
 
 [colors.bright]
 black = "0x928374"
