picom: Remove rounded corners

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -21,7 +21,7 @@ opacity-rule = [
 active-opacity = 1;
 inactive-blur-strength = 1;
 
-corner-radius = 8;
+#corner-radius = 8;
 
 rounded-corners-exclude = [
   "window_type = 'dock'",
