kitty: Add kitty config hyprland: tweak monitor placement & workspace keybinds

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -4,3 +4,4 @@ splash = false
 preload = /home/mrghastien/osfiles/wallpapers/collision.png
 
 wallpaper = eDP-1,/home/mrghastien/osfiles/wallpapers/collision.png
+wallpaper = HDMI-A-0,/home/mrghastien/osfiles/wallpapers/collision.png
