--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,8 +4,6 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1080,0x0,1
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -133,8 +131,8 @@ device {
     sensitivity = -0.5
 }
 
-monitor=eDP-1,1920x1080,1920x0,1
-monitor=HDMI-A-1,4096x2160,0x0,2
+monitor=eDP-1,1920x1080,-1920x0,1
+monitor=HDMI-A-1,preferred,0x0,1
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -157,6 +155,8 @@ bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+bind = $mainMod, Print, exec, grim -g "$(slurp)"
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -172,27 +172,27 @@ bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, ampersand,  workspace, 1
-bind = $mainMod, eacute,     workspace, 2
-bind = $mainMod, quotedbl,   workspace, 3
-bind = $mainMod, apostrophe, workspace, 4
-bind = $mainMod, parenleft,  workspace, 5
-bind = $mainMod, minus,      workspace, 6
-bind = $mainMod, egrave,     workspace, 7
-bind = $mainMod, underscore, workspace, 8
-bind = $mainMod, ccedilla,   workspace, 9
-bind = $mainMod, agrave,     workspace, 10
+bind = $mainMod, ampersand,  focusworkspaceoncurrentmonitor, 1
+bind = $mainMod, eacute,     focusworkspaceoncurrentmonitor, 2
+bind = $mainMod, quotedbl,   focusworkspaceoncurrentmonitor, 3
+bind = $mainMod, apostrophe, focusworkspaceoncurrentmonitor, 4
+bind = $mainMod, parenleft,  focusworkspaceoncurrentmonitor, 5
+bind = $mainMod, minus,      focusworkspaceoncurrentmonitor, 6
+bind = $mainMod, egrave,     focusworkspaceoncurrentmonitor, 7
+bind = $mainMod, underscore, focusworkspaceoncurrentmonitor, 8
+bind = $mainMod, ccedilla,   focusworkspaceoncurrentmonitor, 9
+bind = $mainMod, agrave,     focusworkspaceoncurrentmonitor, 10
 
-bind = $mainMod, 1,  workspace, 1
-bind = $mainMod, 2,  workspace, 2
-bind = $mainMod, 3,  workspace, 3
-bind = $mainMod, 4,  workspace, 4
-bind = $mainMod, 5,  workspace, 5
-bind = $mainMod, 6,  workspace, 6
-bind = $mainMod, 7,  workspace, 7
-bind = $mainMod, 8,  workspace, 8
-bind = $mainMod, 9,  workspace, 9
-bind = $mainMod, 0,  workspace, 10
+bind = $mainMod, 1,  focusworkspaceoncurrentmonitor, 1
+bind = $mainMod, 2,  focusworkspaceoncurrentmonitor, 2
+bind = $mainMod, 3,  focusworkspaceoncurrentmonitor, 3
+bind = $mainMod, 4,  focusworkspaceoncurrentmonitor, 4
+bind = $mainMod, 5,  focusworkspaceoncurrentmonitor, 5
+bind = $mainMod, 6,  focusworkspaceoncurrentmonitor, 6
+bind = $mainMod, 7,  focusworkspaceoncurrentmonitor, 7
+bind = $mainMod, 8,  focusworkspaceoncurrentmonitor, 8
+bind = $mainMod, 9,  focusworkspaceoncurrentmonitor, 9
+bind = $mainMod, 0,  focusworkspaceoncurrentmonitor, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, ampersand,  movetoworkspace, 1
@@ -216,6 +216,11 @@ bind = $mainMod SHIFT, 7,  movetoworkspace, 7
 bind = $mainMod SHIFT, 8,  movetoworkspace, 8
 bind = $mainMod SHIFT, 9,  movetoworkspace, 9
 bind = $mainMod SHIFT, 0,  movetoworkspace, 10
+
+bind = $mainMod ALT, 1,  focusmonitor, mon:eDP-1
+bind = $mainMod ALT, 2,  focusmonitor, mon:HDMI-A-1
+bind = $mainMod ALT, ampersand,  focusmonitor, mon:eDP-1
+bind = $mainMod ALT, eacute,  focusmonitor, mon:HDMI-A-1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
