Change Hyprland keybind commands, add kitty config, remove irrelevent Waybar modules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,28 +1,26 @@
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
-# Some default env vars.
+# Environment variables to make Hyprland work with nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+
 env = XCURSOR_SIZE,24
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-#monitor=eDP-1,1920x1080,0x0,1
+monitor=HDMI-A-1,1920x1080,0x0,1
+monitor=DP-2,1920x1080,1920x0,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = gentoo-pipewire-launcher
-exec-once = hyprpaper
+#exec-once = hyprpaper
 exec-once = waybar
-exec-once = emacs --daemon
-exec-once = hyprctl setcursor Obsidian 24
-exec-once = gammastep -l 48.51:2.20
+#exec-once = emacs --daemon
+#exec-once = hyprctl setcursor Obsidian 24
+#exec-once = gammastep -l 48.51:2.20
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -137,9 +135,6 @@ device {
     sensitivity = -0.5
 }
 
-monitor=eDP-1,1920x1080,1920x0,1
-monitor=HDMI-A-1,4096x2160,0x0,2
-
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -229,9 +224,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = , XF86MonBrightnessUp, exec, brillo -A 5
-bind = , XF86MonBrightnessDown, exec, brillo -U 5
-
-bind = ,XF86AudioRaiseVolume, exec, ~/utilities/changeVolume.sh 2%+
-bind = ,XF86AudioLowerVolume, exec, ~/utilities/changeVolume.sh 2%-
-bind = ,XF86AudioMute       , exec, ~/utilities/changeVolume.sh mute
+bind = ,XF86AudioRaiseVolume, exec, ~/os-files/utilities/changeVolume.sh 2%+
+bind = ,XF86AudioLowerVolume, exec, ~/os-files/utilities/changeVolume.sh 2%-
+bind = ,XF86AudioMute       , exec, ~/os-files/utilities/changeVolume.sh mute
