Save changes after NVMe death & resurrection

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,22 +4,25 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+env = WLR_RENDERER_ALLOW_SOFTWARE=1
 
 env = XCURSOR_SIZE,24
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=HDMI-A-1,1920x1080,0x0,1
-monitor=DP-2,1920x1080,1920x0,1
-
+monitor=DP-1,1920x1080,1920x0,1
+monitor=Unknown-1,disable
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = gentoo-pipewire-launcher
+#exec-once = gentoo-pipewire-launcher
 #exec-once = hyprpaper
+exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway DISPLAY
+exec-once = swww-daemon
 exec-once = waybar
 #exec-once = emacs --daemon
-#exec-once = hyprctl setcursor Obsidian 24
+exec-once = hyprctl setcursor Obsidian 24
 #exec-once = gammastep -l 48.51:2.20
 
 # Source a file (multi-file configs)
@@ -81,8 +84,21 @@ decoration {
 
 layerrule = blur,rofi
 layerrule = blur,notifications
+layerrule = blur,waybar
 layerrule = ignorezero,notifications
 layerrule = ignorezero,rofi
+
+# "Smart gaps" / "No gaps when only"
+# uncomment all if you wish to use that.
+workspace = w[t1], gapsout:0, gapsin:0
+workspace = w[tg1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 animations {
     enabled = yes
@@ -103,12 +119,11 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-    no_gaps_when_only = 1
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -148,13 +163,15 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, kitty
 #bind = $mainMod, Q, exec, kitty
-bind = $mainMod SHIFT, A, killactive, 
+bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, emacsclient -c -a ''
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, focusmonitor, +1
+bind = $mainMod, Home, exec, grim -g "$(slurp)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -227,3 +244,10 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = ,XF86AudioRaiseVolume, exec, ~/os-files/utilities/changeVolume.sh 2%+
 bind = ,XF86AudioLowerVolume, exec, ~/os-files/utilities/changeVolume.sh 2%-
 bind = ,XF86AudioMute       , exec, ~/os-files/utilities/changeVolume.sh mute
+
+bind = ,XF86AudioMedia      , exec, kitty ncmpcpp
+bind = ,XF86Tools           , exec, kitty ncmpcpp
+bind = ,XF86AudioPause      , exec, ~/os-files/utilities/mpd_control.sh toggle
+bind = ,XF86AudioPlay       , exec, ~/os-files/utilities/mpd_control.sh toggle
+bind = ,XF86AudioPrev       , exec, ~/os-files/utilities/mpd_control.sh prev
+bind = ,XF86AudioNext       , exec, ~/os-files/utilities/mpd_control.sh next
