--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ env = WLR_RENDERER_ALLOW_SOFTWARE=1
 env = XCURSOR_SIZE,24
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,1920x1080,0x0,1
+monitor=HDMI-A-1,1920x1080@75,0x0,1
 monitor=DP-1,1920x1080,1920x0,1
 monitor=Unknown-1,disable
 
@@ -18,8 +18,8 @@ monitor=Unknown-1,disable
 # Execute your favorite apps at launch
 #exec-once = gentoo-pipewire-launcher
 #exec-once = hyprpaper
+exec-once = ~/.config/set_wallpapers.sh
 exec-once = dbus-update-activation-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway DISPLAY
-exec-once = swww-daemon
 exec-once = waybar
 #exec-once = emacs --daemon
 exec-once = hyprctl setcursor Obsidian 24
@@ -150,6 +150,10 @@ device {
     sensitivity = -0.5
 }
 
+debug {
+     disable_logs = false
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -171,6 +175,7 @@ bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, focusmonitor, +1
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, Home, exec, grim -g "$(slurp)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
