hyprland: Replace hyprpaper with swaybg, add script for random selection of wallpapers on start

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,8 @@
 
 # Execute your favorite apps at launch
 exec-once = gentoo-pipewire-launcher
-exec-once = hyprpaper
+#exec-once = hyprpaper
+exec-once = ~/.config/set_wallpaper.sh
 exec-once = waybar
 exec-once = emacs --daemon
 exec-once = hyprctl setcursor Obsidian 24
@@ -154,6 +155,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, L, exec, swaylock
 
 bind = $mainMod, Print, exec, grim -g "$(slurp)"
 
