--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -176,7 +176,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, focusmonitor, +1
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, Home, exec, grim -g "$(slurp)" - | wl-copy
+bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
